added UX Case Study titles

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
             </div>
         </header>
-        <!-- About-->
+        <!-- About
         <section class="about-section text-center" id="about">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
@@ -70,28 +70,62 @@
                 <img class="img-fluid" src="assets/img/ipad.png" alt="..." />
             </div>
         </section>
+        -->
+
         <!-- Projects-->
         <section class="projects-section bg-light" id="projects">
             <div class="container px-4 px-lg-5">
                 <!-- Featured Project Row-->
-                <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/bg-masthead.jpg" alt="..." /></div>
+                <div class="row gx-0 mb-4 mb-lg-5">
+                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0 UXCaseImg" src="assets/img/bg-masthead.jpg" alt="..." /></div>
                     <div class="col-xl-4 col-lg-5">
-                        <div class="featured-text text-center text-lg-left">
-                            <h4>Shoreline</h4>
-                            <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+                        <div class="featured-text-right text-lg-left">
+                            <h4 class="UXCaseTitle">Virtual Teaching Platform</h4>
+                            <p class="text-black-50 mb-0">The all-in-one virtual teaching platform for teachers. With ULearn, teachers have a convienent all-in-one place to help them with all their classroom needs...</p>
                         </div>
                     </div>
                 </div>
+
+                <div class="row gx-0 mb-4 mb-lg-5">
+                    <div class="col-xl-4 col-lg-5">
+                        <div class="featured-text-left text-lg-left">
+                            <h4 class="UXCaseTitle">TreasuryDirect.gov</h4>
+                            <p class="text-black-50 mb-00">An updated web and mobile design for TreasuryDirect.gov website. This government site needed an overhaul on how they organize their information and updated layout to help them come into the modern age while still remaining functional.</p>
+                        </div>
+                    </div>
+                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0 UXCaseImg" src="assets/img/bg-masthead.jpg" alt="..." /></div>
+                </div>
+
+                <div class="row gx-0 mb-4 mb-lg-5">
+                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0 UXCaseImg" src="assets/img/bg-masthead.jpg" alt="..." /></div>
+                    <div class="col-xl-4 col-lg-5">
+                        <div class="featured-text-right text-lg-left">
+                            <h4 class="UXCaseTitle">ArtsForAll.com</h4>
+                            <p class="text-black-50 mb-0">The all-in-one virtual teaching platform for teachers. With ULearn, teachers have a convienent all-in-one place to help them with all their classroom needs.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row gx-0 mb-4 mb-lg-5">
+                    <div class="col-xl-4 col-lg-5">
+                        <div class="featured-text-left text-lg-left">
+                            <h4 class="UXCaseTitle">Odysseia</h4>
+                            <p class="text-black-50 mb-0a">A traveling app to help users enjoy their vacation while staying safe from Covid, by providing real time updates of health and safety requirements.</p>
+                        </div>
+                    </div>
+                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0 UXCaseImg" src="assets/img/bg-masthead.jpg" alt="..." /></div>
+                </div>
+
                 <!-- Project One Row-->
+                <!--
                 <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
                     <div class="col-lg-6"><img class="img-fluid" src="assets/img/demo-image-01.jpg" alt="..." /></div>
                     <div class="col-lg-6">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
-                                    <h4 class="text-white">Misty</h4>
-                                    <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
+                                    <h4 class="text-white">TreasuryDirect.gov</h4>
+                                    <p class="mb-0 text-white-50">An updated web and mobile design for TreasuryDirect.gov website. This government site needed an overhaul on how they organize their information and updated layout to help them come into the modern age while still remaining functional.</p>
                                     <hr class="d-none d-lg-block mb-0 ms-0" />
                                 </div>
                             </div>
@@ -99,6 +133,7 @@
                     </div>
                 </div>
                 <!-- Project Two Row-->
+                <!--
                 <div class="row gx-0 justify-content-center">
                     <div class="col-lg-6"><img class="img-fluid" src="assets/img/demo-image-02.jpg" alt="..." /></div>
                     <div class="col-lg-6 order-lg-first">
@@ -112,7 +147,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </section>
         <!-- Signup-->
