More header nav changes

--- a/index.html
+++ b/index.html
@@ -42,20 +42,31 @@
         </nav>
         <!-- Masthead-->
         <header class="masthead">
-            <div class="container px-4 px-lg-5 d-flex h-100 align-items-center">
+            <div class="container px-4 px-lg-5 d-flex h-100 align-items-center ">
                 <div class="d-flex">
                     <div class="">
                         <h1 class="mx-auto my-0">Leon Dinh</h1>
                         <h2 class="mx-auto mt-2 mb-5">product designer and developer
                             specialized in
                             UX/UI, Illustrations, and 3D.</h2>
+                        <div>
+                            
+                        </div>
                     </div>
                 </div>
+            </div>
+
+            <div class="container d-flex justify-content-center align-items-center">
+                <div>
+                    <a class="hvr-sweep buttonNav" href="#projects">UX Case Studies</a>
+                    <a class="hvr-sweep buttonNav" href="#projects">UX Case Studies</a>
+                    <a class="hvr-sweep buttonNav" href="#projects">UX Case Studies</a>
+                    </div>
             </div>
         </header>
 
         <!-- Projects-->
-        <section class="projects-section bg-light" id="projects">
+        <section class="projects-section" id="projects">
             <div class="container px-4 px-lg-5">
                 <!-- Featured Project Row-->
                 <div class="row gx-0 mb-4 mb-lg-5">
