--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="Leon Dinh" content="Portfolio of Product Designer and 3D Artist, Leon Dinh" />
         <meta name="Leon Dinh" content="Portfolio of Product Designer and 3D Artist, Leon Dinh" />
-        <title>Grayscale - Start Bootstrap Theme</title>
+        <title>Leon Dinh - Product Designer</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
 
         <!-- Font Awesome icons (free version)-->
@@ -46,10 +46,12 @@
             <div class="container px-4 px-lg-5 d-flex h-100 align-items-center ">
                 <div class="d-flex">
                     <div class="">
-                        <h1 class="mx-auto my-0">Leon Dinh</h1>
-                        <h2 class="mx-auto mt-2 mb-5">product designer and developer
-                            specialized in
-                            UX/UI, Illustrations, and 3D.</h2>
+                        <h1 class="my-0 mb-3">Leon Dinh</h1>
+                        <h2 class="mt-2">
+                            <p class="mb-1">product designer and developer </p>
+                            <p class="mb-1">specialized in </p>
+                            <p class="mb-1">UX/UI, Illustrations, and 3D.</p>
+                            </h2>
                         <div>
                             
                         </div>
@@ -57,12 +59,6 @@
                 </div>
             </div>
 
-            <div class="container d-flex justify-content-center align-items-center">
-                <div>
-                    <a class="hvr-sweep buttonNav" href="#projects">UX Case Studies</a>
-                    <a class="hvr-sweep buttonNav" href="#projects">UX Case Studies</a>
-                    <a class="hvr-sweep buttonNav" href="#projects">UX Case Studies</a>
-                    </div>
             </div>
         </header>
 
@@ -70,44 +66,44 @@
         <section class="projects-section" id="projects">
             <div class="container px-4 px-lg-5">
                 <!-- Featured Project Row-->
-                <div class="row gx-0 mb-4 mb-lg-5">
-                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0 UXCaseImg" src="assets/img/bg_main.png" alt="..." /></div>
-                    <div class="col-xl-4 col-lg-5">
+                <div class="row gx-0 mb-4 mb-lg-5 mt-xl-5">
+                    <div class="order-1 order-lg-0 col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0 UXCaseImg" src="assets/img/bg_main.png" alt="..." /></div>
+                    <div class="order-0 order-lg-1 col-xl-4 col-lg-5">
                         <div class="featured-text-right text-lg-left">
                             <h4 class="UXCaseTitle">Virtual Teaching Platform</h4>
-                            <p class="text-black-50 mb-0">The all-in-one virtual teaching platform for teachers. With ULearn, teachers have a convienent all-in-one place to help them with all their classroom needs...</p>
+                            <p class="text-black-50 mb-sm-3">The all-in-one virtual teaching platform for teachers. With ULearn, teachers have a convienent all-in-one place to help them with all their classroom needs...</p>
                         </div>
                     </div>
                 </div>
 
-                <div class="row gx-0 mb-4 mb-lg-5">
-                    <div class="col-xl-4 col-lg-5">
+                <div class="row gx-0 mb-4 mb-lg-5 mt-xl-5">
+                    <div class="order-0 order-lg-0 col-xl-4 col-lg-5">
                         <div class="featured-text-left text-lg-left">
                             <h4 class="UXCaseTitle">TreasuryDirect.gov</h4>
-                            <p class="text-black-50 mb-00">An updated web and mobile design for TreasuryDirect.gov website. This government site needed an overhaul on how they organize their information and updated layout to help them come into the modern age while still remaining functional.</p>
+                            <p class="text-black-50 mb-sm-3">An updated web and mobile design for TreasuryDirect.gov website. This government site needed an overhaul on how they organize their information and updated layout to help them come into the modern age while still remaining functional.</p>
                         </div>
                     </div>
-                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0 UXCaseImg" src="assets/img/bg-masthead.jpg" alt="..." /></div>
+                    <div class="order-1 order-lg-1 col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0 UXCaseImg" src="assets/img/bg-masthead.jpg" alt="..." /></div>
                 </div>
 
-                <div class="row gx-0 mb-4 mb-lg-5">
-                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0 UXCaseImg" src="assets/img/bg-masthead.jpg" alt="..." /></div>
-                    <div class="col-xl-4 col-lg-5">
+                <div class="row gx-0 mb-4 mb-lg-5 mt-xl-5">
+                    <div class="order-1 order-lg-0 col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0 UXCaseImg" src="assets/img/bg-masthead.jpg" alt="..." /></div>
+                    <div class="order-0 order-lg-1 col-xl-4 col-lg-5">
                         <div class="featured-text-right text-lg-left">
                             <h4 class="UXCaseTitle">ArtsForAll.com</h4>
-                            <p class="text-black-50 mb-0">The all-in-one virtual teaching platform for teachers. With ULearn, teachers have a convienent all-in-one place to help them with all their classroom needs.</p>
+                            <p class="text-black-50 mb-sm-3">Non-profit organization that offers accessible artistic opportunities to children in the New York City area who face socio-economic, physical, or emotional barriers to exploring the arts.</p>
                         </div>
                     </div>
                 </div>
 
-                <div class="row gx-0 mb-4 mb-lg-5">
-                    <div class="col-xl-4 col-lg-5">
+                <div class="row gx-0 mb-4 mb-lg-5 mt-xl-5">
+                    <div class="order-0 order-lg-0 col-xl-4 col-lg-5">
                         <div class="featured-text-left text-lg-left">
                             <h4 class="UXCaseTitle">Odysseia</h4>
-                            <p class="text-black-50 mb-0a">A traveling app to help users enjoy their vacation while staying safe from Covid, by providing real time updates of health and safety requirements.</p>
+                            <p class="text-black-50 mb-sm-3">A traveling app to help users enjoy their vacation while staying safe from Covid, by providing real time updates of health and safety requirements.</p>
                         </div>
                     </div>
-                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0 UXCaseImg" src="assets/img/bg-masthead.jpg" alt="..." /></div>
+                    <div class="order-1 order-lg-1 col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0 UXCaseImg" src="assets/img/bg-masthead.jpg" alt="..." /></div>
                 </div>
 
                 <!-- Project One Row-->
@@ -144,102 +140,30 @@
                 </div> -->
             </div>
         </section>
-        <!-- Signup-->
-        <!-- <section class="signup-section" id="signup">
+
+        <section class="text-start" id="about">
             <div class="container px-4 px-lg-5">
-                <div class="row gx-4 gx-lg-5">
-                    <div class="col-md-10 col-lg-8 mx-auto text-center">
-                        <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
-                        <h2 class="text-white mb-5">Subscribe to receive updates!</h2> -->
-                        <!-- * * * * * * * * * * * * * * *-->
-                        <!-- * * SB Forms Contact Form * *-->
-                        <!-- * * * * * * * * * * * * * * *-->
-                        <!-- This form is pre-integrated with SB Forms.-->
-                        <!-- To make this form functional, sign up at-->
-                        <!-- https://startbootstrap.com/solution/contact-forms-->
-                        <!-- to get an API token!-->
-                    <!--    <form class="form-signup" id="contactForm" data-sb-form-api-token="API_TOKEN"> -->
-                            <!-- Email address input-->
-                    <!--        <div class="row input-group-newsletter">
-                                <div class="col"><input class="form-control" id="emailAddress" type="email" placeholder="Enter email address..." aria-label="Enter email address..." data-sb-validations="required,email" /></div>
-                                <div class="col-auto"><button class="btn btn-primary disabled" id="submitButton" type="submit">Notify Me!</button></div>
-                            </div>
-                            <div class="invalid-feedback mt-2" data-sb-feedback="emailAddress:required">An email is required.</div>
-                            <div class="invalid-feedback mt-2" data-sb-feedback="emailAddress:email">Email is not valid.</div> -->
-                            <!-- Submit success message-->
-                            <!---->
-                            <!-- This is what your users will see when the form-->
-                            <!-- has successfully submitted-->
-                    <!--        <div class="d-none" id="submitSuccessMessage">
-                                <div class="text-center mb-3 mt-2 text-white">
-                                    <div class="fw-bolder">Form submission successful!</div>
-                                    To activate this form, sign up at
-                                    <br />
-                                    <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
-                                </div>
-                            </div> -->
-                            <!-- Submit error message-->
-                            <!---->
-                            <!-- This is what your users will see when there is-->
-                            <!-- an error submitting the form-->
-                        <!--    <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3 mt-2">Error sending message!</div></div>
-                        </form>
+                <div class="row gx-4 gx-lg-5 justify-content-start">
+                    <div class="">
+                        <p class="text-black-50 mb-lg-5">
+                            About Me </p>
+                        <h2 class="text-black mb-5 col-lg-auto">3D/Product Designer based in Orlando, Florida.</h2>
+
+                        <p class="text-black mb-3 col-lg-6">a designer, artist, developer, and behaviorial researcher hoping to further my career in the design space.</p>
+
+                        <p class="text-black mb-3 col-lg-6">I'm a designer focused on Product and Brand, with an unhealthy addiction to animation and visual arts. My goal is to create simple, beautiful, and accessible interfaces and interactions.</p>
+
+                        <p class="text-black mb-3 col-lg-6">I am also a gamer, comic maniac, and a computer tech nerd who spends too much time collecting Criterion dvds, old school Kung Fu vhs tapes, and anything Disney related.</p>
                     </div>
-                </div>
-            </div>
-        </section> -->
-        <!-- Contact-->
-        <section class="contact-section bg-black" id="about">
-            <div class="container px-4 px-lg-5">
-                <div class="row gx-4 gx-lg-5">
-                    <div class="col-md-4 mb-3 mb-md-0">
-                        <div class="card py-4 h-100">
-                            <div class="card-body text-center">
-                                <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-                                <h4 class="text-uppercase m-0">Address</h4>
-                                <hr class="my-4 mx-auto" />
-                                <div class="small text-black-50">4923 Market Street, Orlando FL</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 mb-3 mb-md-0">
-                        <div class="card py-4 h-100">
-                            <div class="card-body text-center">
-                                <i class="fas fa-envelope text-primary mb-2"></i>
-                                <h4 class="text-uppercase m-0">Email</h4>
-                                <hr class="my-4 mx-auto" />
-                                <div class="small text-black-50"><a href="#!">hello@yourdomain.com</a></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 mb-3 mb-md-0">
-                        <div class="card py-4 h-100">
-                            <div class="card-body text-center">
-                                <i class="fas fa-mobile-alt text-primary mb-2"></i>
-                                <h4 class="text-uppercase m-0">Phone</h4>
-                                <hr class="my-4 mx-auto" />
-                                <div class="small text-black-50">+1 (555) 902-8832</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="social d-flex justify-content-center">
-                    <a class="mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                    <a class="mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                    <a class="mx-2" href="#!"><i class="fab fa-github"></i></a>
                 </div>
             </div>
         </section>
+
         <!-- Footer-->
-        <footer class="footer bg-black small text-center text-white-50"><div class="container px-4 px-lg-5">Copyright &copy; Your Website 2022</div></footer>
+        <footer class="footer bg-black small text-center text-white-50"><div class="container px-4 px-lg-5">Copyright &copy; Leon Dinh 2022</div></footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-        <!-- * *                               SB Forms JS                               * *-->
-        <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-        <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
     </body>
 </html>
