more color matching

--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
         <!-- Projects-->
         <section class="projects-section" id="projects">
             <div class="container px-4 px-lg-5">
-                <p class="text-nav text-black-50 mb-lg-5">
+                <p class="text-nav text-black-50 mb-lg-6">
                     Featured Projects </p>
                 <!-- Featured Project Row-->
                 <div class="row gx-0 mb-4 mb-lg-5 mt-xl-5">
-                    <div class="order-1 order-lg-0 col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0 UXCaseImg" src="assets/img/bg_main.png" alt="..." /></div>
+                    <div class="order-1 order-lg-0 col-xl-8 col-lg-7"><img class="img-fluid mb-3 UXCaseImg" src="assets/img/bg_main.png" alt="..." /></div>
                     <div class="order-0 order-lg-1 col-xl-4 col-lg-5">
                         <div class="featured-text-right text-lg-left">
                             <h4 class="UXCaseTitle">Virtual Teaching Platform</h4>
@@ -87,11 +87,11 @@
                             <a class="hvr-sweep mb-4" href="">View Case Study</a>
                         </div>
                     </div>
-                    <div class="order-1 order-lg-1 col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0 UXCaseImg" src="assets/img/bg-masthead.jpg" alt="..." /></div>
+                    <div class="order-1 order-lg-1 col-xl-8 col-lg-7"><img class="img-fluid mb-3 UXCaseImg" src="assets/img/bg-masthead.jpg" alt="..." /></div>
                 </div>
 
                 <div class="row gx-0 mb-4 mb-lg-5 mt-xl-5">
-                    <div class="order-1 order-lg-0 col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0 UXCaseImg" src="assets/img/bg-masthead.jpg" alt="..." /></div>
+                    <div class="order-1 order-lg-0 col-xl-8 col-lg-7"><img class="img-fluid mb-3 UXCaseImg" src="assets/img/bg-masthead.jpg" alt="..." /></div>
                     <div class="order-0 order-lg-1 col-xl-4 col-lg-5">
                         <div class="featured-text-right text-lg-left">
                             <h4 class="UXCaseTitle">ArtsForAll.com</h4>
@@ -109,7 +109,7 @@
                             <a class="hvr-sweep mb-4" href="">View Case Study</a>
                         </div>
                     </div>
-                    <div class="order-1 order-lg-1 col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0 UXCaseImg" src="assets/img/bg-masthead.jpg" alt="..." /></div>
+                    <div class="order-1 order-lg-1 col-xl-8 col-lg-7"><img class="img-fluid mb-3 UXCaseImg" src="assets/img/bg-masthead.jpg" alt="..." /></div>
                 </div>
 
                 <!-- Project One Row-->
@@ -151,7 +151,7 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-start">
                     <div class="">
-                        <p class="text-nav text-black-50 mb-5">
+                        <p class="text-nav text-black-50 mb-lg-6">
                             About Me </p>
                         <h2 class="text-black mb-5 col-lg-auto aboutMeTag">3D/Product Designer based in Orlando, Florida.</h2>
 
@@ -159,9 +159,11 @@
 
                         <p class="aboutMeBody mb-3 col-lg-7">I'm a designer focused on Product and Brand, with an unhealthy addiction to animation and visual arts. My goal is to create simple, beautiful, and accessible interfaces and interactions.</p>
 
-                        <p class="aboutMeBody mb-lg-5 col-lg-7">I am also a gamer, comic maniac, and a computer tech nerd who spends too much time collecting Criterion dvds, old school Kung Fu vhs tapes, and anything Disney related.</p>
+                        <p class="aboutMeBody mb-3 col-lg-7">I am also a gamer, comic maniac, and a computer tech nerd who spends too much time collecting Criterion dvds, old school Kung Fu vhs tapes, and anything Disney related.</p>
                     </div>
                 </div>
+                <a class="hvr-sweep mb-lg-5" href="">More Information</a>
+
             </div>
         </section>
 
