--- a/index.html
+++ b/index.html
@@ -65,85 +65,77 @@
         <!-- Projects-->
         <section class="projects-section" id="projects">
             <div class="container px-4 px-lg-5">
-                <p class="text-nav text-black-50 mb-lg-6">
+                <p class="leadingLine text-nav text-muted mb-5 mb-lg-6">
                     Featured Projects </p>
                 <!-- Featured Project Row-->
-                <div class="row gx-0 mb-4 mb-lg-5 mt-xl-5">
-                    <div class="order-1 order-lg-0 col-xl-8 col-lg-7"><img class="img-fluid mb-3 UXCaseImg" src="assets/img/bg_main.png" alt="..." /></div>
+                <div class="row gx-0 UXCase">
+                    <div class="order-0 order-lg-0 col-xl-8 col-lg-7 UXCaseImg-left"><img class="img-fluid mb-3 UXCaseImg" src="./assets/img/VirtualTeachingApp.png" alt="..." /></div>
                     <div class="order-0 order-lg-1 col-xl-4 col-lg-5">
                         <div class="featured-text-right text-lg-left">
                             <h4 class="UXCaseTitle">Virtual Teaching Platform</h4>
-                            <p class="text-black-50 mb-sm-3">The all-in-one virtual teaching platform for teachers. With ULearn, teachers have a convienent all-in-one place to help them with all their classroom needs...</p>
+                            <p class="text-black-50 mb-sm-4">The all-in-one virtual teaching platform for teachers. With ULearn, teachers have a convienent all-in-one place to help them with all their classroom needs...</p>
+                            <div class="UXCaseLabel mb-sm-4">
+                                <p class="UXCaseTag">UX/UI</p>
+                                <p class="UXCaseTag">Design System</p>
+                                <p class="UXCaseTag">Mobile App</p>
+                                <p class="UXCaseTag">Figma</p>
+                            </div>
                             <a class="hvr-sweep mb-4" href="">View Case Study</a>
                         </div>
                     </div>
                 </div>
 
-                <div class="row gx-0 mb-4 mb-lg-5 mt-xl-5">
-                    <div class="order-0 order-lg-0 col-xl-4 col-lg-5">
+                <div class="row gx-0 UXCase">
+                    <div class="order-1 order-lg-0 col-xl-4 col-lg-5">
                         <div class="featured-text-left text-lg-left">
                             <h4 class="UXCaseTitle">TreasuryDirect.gov</h4>
-                            <p class="text-black-50 mb-sm-3">An updated web and mobile design for TreasuryDirect.gov website. This government site needed an overhaul on how they organize their information and updated layout to help them come into the modern age while still remaining functional.</p>
+                            <p class="text-black-50 mb-sm-4">This government site needed an overhaul on how they organize their information and updated layout to help them come into the modern age while still remaining functional.</p>
+                            <div class="UXCaseLabel mb-sm-4">
+                                <p class="UXCaseTag">UX/UI</p>
+                                <p class="UXCaseTag">Redesign</p>
+                                <p class="UXCaseTag">Desktop</p>
+                                <p class="UXCaseTag">Mobile</p>
+                            </div>
                             <a class="hvr-sweep mb-4" href="">View Case Study</a>
                         </div>
                     </div>
-                    <div class="order-1 order-lg-1 col-xl-8 col-lg-7"><img class="img-fluid mb-3 UXCaseImg" src="assets/img/bg-masthead.jpg" alt="..." /></div>
+                    <div class="order-0 order-lg-1 col-xl-8 col-lg-7 UXCaseImg-right"><img class="img-fluid mb-3 UXCaseImg" src="./assets/img/TreasuryDirect.png" alt="..." /></div>
                 </div>
 
-                <div class="row gx-0 mb-4 mb-lg-5 mt-xl-5">
-                    <div class="order-1 order-lg-0 col-xl-8 col-lg-7"><img class="img-fluid mb-3 UXCaseImg" src="assets/img/bg-masthead.jpg" alt="..." /></div>
+                <div class="row gx-0 UXCase">
+                    <div class="order-0 order-lg-0 col-xl-8 col-lg-7 UXCaseImg-left"><img class="img-fluid mb-3 UXCaseImg" src="./assets/img/ArtsForAll.png" alt="..." /></div>
                     <div class="order-0 order-lg-1 col-xl-4 col-lg-5">
                         <div class="featured-text-right text-lg-left">
                             <h4 class="UXCaseTitle">ArtsForAll.com</h4>
-                            <p class="text-black-50 mb-sm-3">Non-profit organization that offers accessible artistic opportunities to children in the New York City area who face socio-economic, physical, or emotional barriers to exploring the arts.</p>
+                            <p class="text-black-50 mb-sm-4">Non-profit organization that offers accessible artistic opportunities to children in the New York City area who face socio-economic, physical, or emotional barriers to exploring the arts.</p>
+                            <div class="UXCaseLabel mb-sm-4">
+                                <p class="UXCaseTag">UX/UI</p>
+                                <p class="UXCaseTag">Design System</p>
+                                <p class="UXCaseTag">Figma</p>
+                                <p class="UXCaseTag">Illustrator</p>
+                            </div>
                             <a class="hvr-sweep mb-4" href="">View Case Study</a>
                         </div>
                     </div>
                 </div>
 
-                <div class="row gx-0 mb-4 mb-lg-5 mt-xl-5">
-                    <div class="order-0 order-lg-0 col-xl-4 col-lg-5">
+                <div class="row gx-0 UXCase">
+                    <div class="order-1 order-lg-0 col-xl-4 col-lg-5">
                         <div class="featured-text-left text-lg-left">
                             <h4 class="UXCaseTitle">Odysseia</h4>
-                            <p class="text-black-50 mb-sm-3">A traveling app to help users enjoy their vacation while staying safe from Covid, by providing real time updates of health and safety requirements.</p>
+                            <p class="text-black-50 mb-sm-4">A traveling app to help users enjoy their vacation while staying safe from Covid, by providing real time updates of health and safety requirements.</p>
+                            <div class="UXCaseLabel mb-sm-4">
+                                <p class="UXCaseTag">UX</p>
+                                <p class="UXCaseTag">Research</p>
+                                <p class="UXCaseTag">Design System</p>
+                                <p class="UXCaseTag">Mobile App</p>
+                            </div>
                             <a class="hvr-sweep mb-4" href="">View Case Study</a>
                         </div>
                     </div>
-                    <div class="order-1 order-lg-1 col-xl-8 col-lg-7"><img class="img-fluid mb-3 UXCaseImg" src="assets/img/bg-masthead.jpg" alt="..." /></div>
+                    <div class="order-0 order-lg-1 col-xl-8 col-lg-7 UXCaseImg-right"><img class="img-fluid mb-3 UXCaseImg" src="./assets/img/ArtsForAll.png" alt="..." /></div>
                 </div>
 
-                <!-- Project One Row-->
-                <!--
-                <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/demo-image-01.jpg" alt="..." /></div>
-                    <div class="col-lg-6">
-                        <div class="bg-black text-center h-100 project">
-                            <div class="d-flex h-100">
-                                <div class="project-text w-100 my-auto text-center text-lg-left">
-                                    <h4 class="text-white">TreasuryDirect.gov</h4>
-                                    <p class="mb-0 text-white-50">An updated web and mobile design for TreasuryDirect.gov website. This government site needed an overhaul on how they organize their information and updated layout to help them come into the modern age while still remaining functional.</p>
-                                    <hr class="d-none d-lg-block mb-0 ms-0" />
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                Project Two Row
-
-                <div class="row gx-0 justify-content-center">
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/demo-image-02.jpg" alt="..." /></div>
-                    <div class="col-lg-6 order-lg-first">
-                        <div class="bg-black text-center h-100 project">
-                            <div class="d-flex h-100">
-                                <div class="project-text w-100 my-auto text-center text-lg-right">
-                                    <h4 class="text-white">Mountains</h4>
-                                    <p class="mb-0 text-white-50">Another example of a project with its respective description. These sections work well responsively as well, try this theme on a small screen!</p>
-                                    <hr class="d-none d-lg-block mb-0 me-0" />
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div> -->
             </div>
         </section>
 
@@ -151,7 +143,7 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-start">
                     <div class="">
-                        <p class="text-nav text-black-50 mb-lg-6">
+                        <p class="leadingLine text-nav text-muted mb-5 mb-lg-6">
                             About Me </p>
                         <h2 class="text-black mb-5 col-lg-auto aboutMeTag">3D/Product Designer based in Orlando, Florida.</h2>
 
