--- a/index.html
+++ b/index.html
@@ -69,8 +69,10 @@
                     Featured Projects </p>
                 <!-- Featured Project Row-->
                 <div class="row gx-0 UXCase">
-                    <div class="order-0 order-lg-0 col-xl-8 col-lg-7 UXCaseImg-left"><img class="img-fluid mb-3 UXCaseImg" src="./assets/img/VirtualTeachingApp.png" alt="..." /></div>
-                    <div class="order-0 order-lg-1 col-xl-4 col-lg-5">
+                    <div class="order-0 order-lg-0 col-xl-7 col-lg-6 UXCaseImg-left">
+                        <img class="img-fluid mb-3 UXCaseImg" src="./assets/img/VirtualTeachingApp.png" alt="..." />
+                    </div>
+                    <div class="order-0 order-lg-1 col-xl-5 col-lg-6">
                         <div class="featured-text-right text-lg-left">
                             <h4 class="UXCaseTitle">Virtual Teaching Platform</h4>
                             <p class="text-black-50 mb-sm-4">The all-in-one virtual teaching platform for teachers. With ULearn, teachers have a convienent all-in-one place to help them with all their classroom needs...</p>
@@ -86,7 +88,7 @@
                 </div>
 
                 <div class="row gx-0 UXCase">
-                    <div class="order-1 order-lg-0 col-xl-4 col-lg-5">
+                    <div class="order-1 order-lg-0 col-xl-5 col-lg-6">
                         <div class="featured-text-left text-lg-left">
                             <h4 class="UXCaseTitle">TreasuryDirect.gov</h4>
                             <p class="text-black-50 mb-sm-4">This government site needed an overhaul on how they organize their information and updated layout to help them come into the modern age while still remaining functional.</p>
@@ -99,7 +101,9 @@
                             <a class="hvr-sweep mb-4" href="">View Case Study</a>
                         </div>
                     </div>
-                    <div class="order-0 order-lg-1 col-xl-8 col-lg-7 UXCaseImg-right"><img class="img-fluid mb-3 UXCaseImg" src="./assets/img/TreasuryDirect.png" alt="..." /></div>
+                    <div class="order-0 order-lg-1 col-xl-6 col-lg-7 UXCaseImg-right">
+                        <img class="img-fluid mb-3 UXCaseImg" src="./assets/img/TreasuryDirect.png" alt="..." />
+                    </div>
                 </div>
 
                 <div class="row gx-0 UXCase">
