Renamed the page title

--- a/CaseStudies/UX_VTP.html
+++ b/CaseStudies/UX_VTP.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="Leon Dinh" content="Portfolio of Product Designer and 3D Artist, Leon Dinh" />
-    <meta name="Leon Dinh" content="Portfolio of Product Designer and 3D Artist, Leon Dinh" />
-    <title>Leon Dinh - Product Designer</title>
+    <title>Leon Dinh - UX Case - Virtual Teaching Platform</title>
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
 
     <!-- Font Awesome icons (free version)-->
