More prepping for the CaseStudy Page

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- ###### dev branch ######-->
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -27,7 +26,7 @@
             j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
             })(window,document,'script','dataLayer','GTM-WVDNXQD');
-            </script>
+        </script>
             <!-- End Google Tag Manager -->
     </head>
 
@@ -35,8 +34,9 @@
 
     <body id="page-top">
         <!-- Google Tag Manager (noscript) -->
-        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WVDNXQD"
-         height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+        <noscript>
+            <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WVDNXQD" height="0" width="0" style="display:none; visibility:hidden"></iframe>
+        </noscript>
         <!-- End Google Tag Manager (noscript) -->
 
         <!-- Navigation-->
@@ -85,7 +85,7 @@
                 <div class="row gx-0 UXCase">
                     <div class="order-0 order-lg-0 col-xl-6 col-lg-6">
                         <a href="./CaseStudies/UX_VTP.html">
-                            <img class="img-fluid mb-3 UXCaseImg" src="./assets/img/VirtualTeachingApp.png" alt="..." />
+                            <img class="img-fluid mb-3 UXCaseImg" src="./assets/img/VirtualTeachingApp_HALF.png" alt="..." />
                             </a>
                     </div>
                     <div class="order-0 order-lg-1 col-xl-6 col-lg-6">
@@ -119,7 +119,7 @@
                     </div>
                     <div class="order-0 order-lg-1 col-xl-6 col-lg-6">
                         <a>
-                            <img class="img-fluid mb-3 UXCaseImg" src="./assets/img/TreasuryDirect.png" alt="..." />
+                            <img class="img-fluid mb-3 UXCaseImg" src="./assets/img/TreasuryDirect_HALF.png" alt="..." />
                         </a>
                     </div>
                 </div>
@@ -127,7 +127,7 @@
                 <div class="row gx-0 UXCase">
                     <div class="order-0 order-lg-0 col-xl-6 col-lg-6">
                         <a>
-                            <img class="img-fluid mb-3 UXCaseImg" src="./assets/img/ArtsForAll.png" alt="..." />
+                            <img class="img-fluid mb-3 UXCaseImg" src="./assets/img/ArtsForAll_HALF.png" alt="..." />
                         </a>
                     </div>
                     <div class="order-0 order-lg-1 col-xl-6 col-lg-6">
@@ -161,7 +161,7 @@
                     </div>
                     <div class="order-0 order-lg-1 col-xl-6 col-lg-6">
                         <a>
-                            <img class="img-fluid mb-3 UXCaseImg" src="./assets/img/ArtsForAll.png" alt="..." />
+                            <img class="img-fluid mb-3 UXCaseImg" src="./assets/img/ArtsForAll_HALF.png" alt="..." />
                         </a>
                     </div>
                 </div>
