--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                             </a>
                     </div>
                     <div class="order-0 order-lg-1 col-xl-6 col-lg-6">
-                        <div class="featured-text-right text-lg-left">
+                        <div class="featured-text-right">
                             <h4 class="UXCaseTitle">Virtual Teaching Platform</h4>
                             <p class="text-black-50 mb-sm-4">The all-in-one virtual teaching platform for teachers. With ULearn, teachers have a convienent all-in-one place to help them with all their classroom needs...</p>
                             <div class="UXCaseLabel mb-sm-4">
@@ -100,7 +100,7 @@
 
                 <div class="row gx-0 UXCase">
                     <div class="order-1 order-lg-0 col-xl-6 col-lg-6">
-                        <div class="featured-text-left text-lg-left">
+                        <div class="featured-text-left">
                             <h4 class="UXCaseTitle">TreasuryDirect.gov</h4>
                             <p class="text-black-50 mb-sm-4">This government site needed an overhaul on how they organize their information and updated layout to help them come into the modern age while still remaining functional.</p>
                             <div class="UXCaseLabel mb-sm-4">
@@ -126,7 +126,7 @@
                         </a>
                     </div>
                     <div class="order-0 order-lg-1 col-xl-6 col-lg-6">
-                        <div class="featured-text-right text-lg-left">
+                        <div class="featured-text-right">
                             <h4 class="UXCaseTitle">ArtsForAll.com</h4>
                             <p class="text-black-50 mb-sm-4">Non-profit organization that offers accessible artistic opportunities to children in the New York City area who face socio-economic, physical, or emotional barriers to exploring the arts.</p>
                             <div class="UXCaseLabel mb-sm-4">
@@ -142,7 +142,7 @@
 
                 <div class="row gx-0 UXCase">
                     <div class="order-1 order-lg-0 col-xl-6 col-lg-6">
-                        <div class="featured-text-left text-lg-left">
+                        <div class="featured-text-left">
                             <h4 class="UXCaseTitle">Odysseia</h4>
                             <p class="text-black-50 mb-sm-4">A traveling app to help users enjoy their vacation while staying safe from Covid, by providing real time updates of health and safety requirements.</p>
                             <div class="UXCaseLabel mb-sm-4">
