added padding for mobile screen

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                                 <p class="UXCaseTag">Mobile App</p>
                                 <p class="UXCaseTag">Figma</p>
                             </div>
-                            <a class="hvr-sweep mb-4" href="./CaseStudies/UX_VTP.html">View Case Study</a>
+                            <a class="hvr-sweep mt-sm-4 mb-4" href="./CaseStudies/UX_VTP.html">View Case Study</a>
                         </div>
                     </div>
                 </div>
@@ -109,7 +109,7 @@
                                 <p class="UXCaseTag">Desktop</p>
                                 <p class="UXCaseTag">Mobile</p>
                             </div>
-                            <a class="hvr-sweep mb-4" href="">View Case Study</a>
+                            <a class="hvr-sweep mt-sm-4 mb-4" href="">View Case Study</a>
                         </div>
                     </div>
                     <div class="order-0 order-lg-1 col-xl-6 col-lg-6">
@@ -135,7 +135,7 @@
                                 <p class="UXCaseTag">Figma</p>
                                 <p class="UXCaseTag">Illustrator</p>
                             </div>
-                            <a class="hvr-sweep mb-4" href="">View Case Study</a>
+                            <a class="hvr-sweep mt-sm-4 mb-4" href="">View Case Study</a>
                         </div>
                     </div>
                 </div>
@@ -151,7 +151,7 @@
                                 <p class="UXCaseTag">Design System</p>
                                 <p class="UXCaseTag">Mobile App</p>
                             </div>
-                            <a class="hvr-sweep mb-4" href="">View Case Study</a>
+                            <a class="hvr-sweep mt-sm-4 mb-4" href="">View Case Study</a>
                         </div>
                     </div>
                     <div class="order-0 order-lg-1 col-xl-6 col-lg-6">
