--- a/CaseStudies/UX_VTP.html
+++ b/CaseStudies/UX_VTP.html
@@ -48,7 +48,7 @@
             </div>
             
             <nav role="navigation" class="navigation-menu w-nav-menu">
-                <div class="row w-row">
+                <div class="row">
                     <div class="column-4 w-col w-col-6">
                         <h1 class="heading-4 large">
                             <a href="https://kaider.github.io/Portfolio/" data-ix="opacity-on-hover" aria-current="page" class="link-7 w--current" style="opacity: 1; transform: translateX(0px) translateY(0px) translateZ(0px);">LD
