fixed row dragging

--- a/CaseStudies/UX_VTP.html
+++ b/CaseStudies/UX_VTP.html
@@ -47,7 +47,7 @@
                 <div class="icon w-icon-nav-menu"></div>
             </div>
             
-            <nav role="navigation" class="navigation-menu w-nav-menu">
+            <nav role="navigation" class="navigation-menu container-fluid w-nav-menu">
                 <div class="row">
                     <div class="column-4 w-col w-col-6">
                         <h1 class="heading-4 large">
