--- a/CaseStudies/UX_VTP.html
+++ b/CaseStudies/UX_VTP.html
@@ -43,21 +43,50 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="https://kaider.github.io/Portfolio/">LD</a>
+            <a class="navbar-brand" href="../index.html#page-to">LD</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
                 <i class="fas fa-bars"></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item fw-semibold">
-                        <a class="nav-link" href="https://kaider.github.io/Portfolio/#projects">
-                            PORTFOLIO
+                    <li class="nav-item">
+                        <a class="fw-semibold nav-link" href="../index.html#page-top">
+                            HOME
                         </a>
                     </li>
 
-                    <li class="nav-item fw-semibold">
-                        <a class="nav-link" href="https://kaider.github.io/Portfolio/#about">
+                    <li class="nav-item dropdown">
+                        <a class="fw-semibold nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          PORTFOLIO
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <div class="row mainDropdown">
+                                <div class="col-md-5">
+                                    <ul class="list-unstyled">
+                                        <li class="fw-normal text-muted mb-md-3 followingLine" style="padding-left: 1rem;">Categories</li>
+                                        <li><a class="dropdown-item" href="../index.html#projects">UX Case Studies</a></li>
+                                        <li><a class="dropdown-item" href="#">Illustrations</a></li>
+                                        <li><a class="dropdown-item" href="#">3D Assets</a></li>
+                                        <li><a class="dropdown-item" href="#">Work-in-Progress</a></li>
+                                    </ul>
+                                </div>
+
+                                <div class="col-md-7">
+                                    <ul class="list-unstyled">
+                                        <li class="fw-normal text-muted mb-md-3 followingLine" style="padding-left: 1rem;">UX Case Studies</li>
+                                        <li><a class="dropdown-item" href="#">Virtual Teaching Platform</a></li>
+                                        <li><a class="dropdown-item" href="#">TreasuryDirect.gov</a></li>
+                                        <li><a class="dropdown-item" href="#">ArtsForAll.com</a></li>
+                                        <li><a class="dropdown-item" href="#">Odysseia</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                      </li>
+                    
+                    <li class="nav-item">
+                        <a class="fw-semibold nav-link" href="#about">
                             ABOUT
                         </a>
                     </li>
@@ -70,7 +99,7 @@
         <div class="container px-4 px-lg-5 d-flex h-100 align-items-center">
             <div class="d-flex">
                 <div class="col-sm-11">
-                    <h1 class="my-0 mb-5">Virtual Teaching Platform</h1>
+                    <h1 class="my-0 mb-4">Virtual Teaching Platform</h1>
                     <h2 class="mt-2">
                         <p class="mb-2 fw-normal">
                             The all-in-one virtual teaching platform for teachers. <br> <br>
