--- a/index.html
+++ b/index.html
@@ -50,42 +50,43 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item fw-semibold">
-                            <a class="nav-link" href="#page-top">
+                        <li class="nav-item">
+                            <a class="fw-semibold nav-link" href="#page-top">
                                 HOME
                             </a>
                         </li>
 
-                        <li class="nav-item dropdown fw-semibold">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <li class="nav-item dropdown">
+                            <a class="fw-semibold nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                               PORTFOLIO
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <div class="row mainDropdown">
-                                    <div class="col-md-6">
-                                        <ul class="">
-                                            <li>UX Case Studies</li>
-                                            <li><hr class="dropdown-divider"></li>
-                                            <li><a class="dropdown-item" href="#">Virtual Teaching Platform</a></li>
-                                            <li><a class="dropdown-item" href="#">TreasuryDirect.gov</a></li>
-                                            <li><a class="dropdown-item" href="#">ArtsForAll.com</a></li>
-                                            <li><a class="dropdown-item" href="#">Odysseia</a></li>
+                                    <div class="col-md-5">
+                                        <ul class="list-unstyled">
+                                            <li class="fw-normal text-muted mb-md-3 followingLine" style="padding-left: 1rem;">Categories</li>
+                                            <li><a class="dropdown-item" href="#projects">UX Case Studies</a></li>
+                                            <li><a class="dropdown-item" href="#">Illustrations</a></li>
+                                            <li><a class="dropdown-item" href="#">3D Assets</a></li>
+                                            <li><a class="dropdown-item" href="#">Work-in-Progress</a></li>
                                         </ul>
                                     </div>
 
-                                    <div class="col-md-6">
-                                        <ul class="">
-                                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                                            <li><hr class="dropdown-divider"></li>
-                                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                    <div class="col-md-7">
+                                        <ul class="list-unstyled">
+                                            <li class="fw-normal text-muted mb-md-3 followingLine" style="padding-left: 1rem;">UX Case Studies</li>
+                                            <li><a class="dropdown-item" href="./CaseStudies/UX_VTP.html">Virtual Teaching Platform</a></li>
+                                            <li><a class="dropdown-item" href="#">TreasuryDirect.gov</a></li>
+                                            <li><a class="dropdown-item" href="#">ArtsForAll.com</a></li>
+                                            <li><a class="dropdown-item" href="#">Odysseia</a></li>
                                         </ul>
                                     </div>
                                 </div>
                             </div>
                           </li>
                         
-                        <li class="nav-item fw-semibold">
-                            <a class="nav-link" href="#about">
+                        <li class="nav-item">
+                            <a class="fw-semibold nav-link" href="#about">
                                 ABOUT
                             </a>
                         </li>
@@ -94,15 +95,15 @@
             </div>
         </nav>
         <!-- Masthead-->
-        <header class="hero-section home masthead">
+        <header class="hero-section masthead">
             <div class="container px-4 px-lg-5 d-flex h-100 align-items-center ">
                 <div class="d-flex">
                     <div class=" ">
-                        <h1 class="my-0 mb-3">Leon Dinh</h1>
+                        <h1 class="my-0 mb-3 topFade">Leon Dinh</h1>
                         <h2 class="mt-2">
-                            <p class="mb-2 fw-light">product designer and developer </p>
-                            <p class="mb-2 fw-light">specialized in </p>
-                            <p class="mb-2 fw-light">UX/UI, Illustrations, and 3D.</p>
+                            <p class="mb-2 fw-light fadeIn-2-2">product designer and developer </p>
+                            <p class="mb-2 fw-light fadeIn-4-2">specialized in </p>
+                            <p class="mb-2 fw-light fadeIn-3-2">UX/UI, Illustrations, and 3D.</p>
                         </h2>
                     </div>
                 </div>
@@ -110,7 +111,7 @@
         </header>
 
         <!-- Projects-->
-        <section class="offwhite projects-section" id="projects">
+        <section class="projects-section" id="projects">
             <div class="container px-4 px-lg-5">
                 <p class="leadingLine text-nav text-muted mb-5 mb-lg-6">
                     Featured Projects </p>
@@ -202,7 +203,7 @@
             </div>
         </section>
 
-        <section class="offwhite text-start" id="about">
+        <section class="text-start" id="about">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-start">
                     <div class="">
