Setting up the About Page

--- a/CaseStudies/Templates.html
+++ b/CaseStudies/Templates.html
@@ -100,9 +100,9 @@
         <div class="container px-4 px-lg-5 d-flex h-100 align-items-center">
             <div class="d-flex">
                 <div class="col-sm-11">
-                    <h1 class="my-0 mb-4">Virtual Teaching Platform</h1>
+                    <h1 class="my-0 mb-4 topFade">Virtual Teaching Platform</h1>
                     <h2 class="mt-2">
-                        <p class="mb-2 fw-normal">
+                        <p class="mb-2 fw-normal fadeIn-3-2">
                             The all-in-one virtual teaching platform for teachers. <br> <br>
 
                             Virtual teachers have a lot on their plates and have to use multiple <br>
