--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                           </li>
                         
                         <li class="nav-item">
-                            <a class="fw-semibold nav-link" href="#about">
+                            <a class="fw-semibold nav-link" href="./About.html">
                                 ABOUT
                             </a>
                         </li>
@@ -101,9 +101,9 @@
                     <div class=" ">
                         <h1 class="my-0 mb-3 topFade">Leon Dinh</h1>
                         <h2 class="mt-2">
-                            <p class="mb-2 fw-light fadeIn-2-2">product designer and developer </p>
-                            <p class="mb-2 fw-light fadeIn-4-2">specialized in </p>
-                            <p class="mb-2 fw-light fadeIn-3-2">UX/UI, Illustrations, and 3D.</p>
+                            <p class="mb-2 fw-light fadeIn-1">product designer and developer </p>
+                            <p class="mb-2 fw-light fadeIn-2">specialized in </p>
+                            <p class="mb-2 fw-light fadeIn-1">UX/UI, Illustrations, and 3D.</p>
                         </h2>
                     </div>
                 </div>
@@ -203,7 +203,7 @@
             </div>
         </section>
 
-        <section class="text-start" id="about">
+        <!-- <section class="text-start" id="about">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-start">
                     <div class="">
@@ -221,7 +221,7 @@
                 <a class="hvr-sweep mb-lg-5" href="">More Information</a>
 
             </div>
-        </section>
+        </section> -->
 
         <!-- Footer-->
         <footer class="footer bg-transparent small text-center text-black-50">
