dropdown menu and mobile fix

--- a/About.html
+++ b/About.html
@@ -62,23 +62,21 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <div class="row mainDropdown">
-                                <div class="col-md-5">
-                                    <ul class="list-unstyled">
-                                        <li class="fw-normal text-muted mb-md-3 followingLine" style="padding-left: 1rem;">Categories</li>
-                                        <li><a class="dropdown-item" href="../index.html#projects">UX Case Studies</a></li>
-                                        <li><a class="dropdown-item" href="#">Illustrations</a></li>
-                                        <li><a class="dropdown-item" href="#">3D Assets</a></li>
-                                        <li><a class="dropdown-item" href="#">Work-in-Progress</a></li>
-                                    </ul>
-                                </div>
-
                                 <div class="col-md-7">
                                     <ul class="list-unstyled">
-                                        <li class="fw-normal text-muted mb-md-3 followingLine" style="padding-left: 1rem;">UX Case Studies</li>
+                                        <li class="fw-normal text-muted mb-md-3 followingLine" style="padding-left: 1rem;">Case Studies</li>
                                         <li><a class="dropdown-item" href="./CaseStudies/UX_VTP.html">Virtual Teaching Platform</a></li>
                                         <li><a class="dropdown-item" href="#">TreasuryDirect.gov</a></li>
                                         <li><a class="dropdown-item" href="#">ArtsForAll.com</a></li>
                                         <li><a class="dropdown-item" href="#">Odysseia</a></li>
+                                    </ul>
+                                </div>
+
+                                <div class="col-md-5">
+                                    <ul class="list-unstyled">
+                                        <li class="fw-normal text-muted mb-md-3 followingLine" style="padding-left: 1rem;">Others</li>
+                                        <li><a class="dropdown-item" href="#">Illustrations</a></li>
+                                        <li><a class="dropdown-item" href="#">3D Assets</a></li>
                                     </ul>
                                 </div>
                             </div>
